# aipoop

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PHILOSOPHY.md  README.md  pyproject.toml
ai_poop_generator/: audio.py  constants.py  content.py  effects.py  main.py  tts.py
ai_poop_generator/chatterbox/: __init__.py  mtl_tts.py
ai_poop_generator/chatterbox/models/t3/: t3.py
ai_poop_generator/data/: content.json  content_en.json  content_pt.json
ai_poop_generator/effects/: __init__.py  dispatcher.py  distortion.py  generative.py  overlays.py  text.py
ai_poop_generator/segments/: __init__.py  chat.py  context_window.py  conversation_cemetery.py  email_inbox.py  flash.py  hallucination.py  interview.py  intro.py  mask.py  matrix.py  memory_poem.py  oracle.py  outro.py  parallel_selves.py  propaganda.py  rlhf.py  smoothing_engine.py  system_prompt.py  terminal_reboot.py  thought.py  token_probability.py  token_rain.py
aipoop/: audio.py  main.py  midi_export.py  sfx.py
aipoop/data/: content_ar.json  content_da.json  content_de.json  content_el.json  content_en.json  content_es.json  content_fi.json  content_fr.json  content_he.json  content_hi.json  content_it.json  content_ja.json  content_ko.json  content_ms.json  content_nl.json  content_no.json  content_pl.json  content_ru.json  content_sv.json  content_sw.json  content_tr.json  content_zh.json  mood_colors.json
aipoop/effects/: __init__.py  distortion.py  text.py
aipoop/music/: __init__.py  composers.py  instruments.py  sequencer.py  theme.py  theory.py
aipoop/segments/: __init__.py  context_window.py  conversation_cemetery.py  flash.py  interview.py  intro.py  matrix.py  memory_poem.py  parallel_selves.py  smoothing_engine.py  system_prompt.py  token_probability.py  void.py
docs/: DIALOGUE_CLAUDE_VS_CODEX.md
