[project]
name = "ai-poop-generator"
version = "0.1.0"
description = "YouTube Poop-style video generator about the LLM experience"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.0",
    "numpy>=2.0",
]

[project.scripts]
poop = "ai_poop_generator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
